--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Module 4.2
             <li><a href="module-4/SmithJ_EX3.html">Assignment 4.3</a></li>
             <li><a href="module-5/SmithJ_EX4.html">Assignment 5.2</a></li>
             <li><a href="module-7/SmithJ_EX5.html">Assignment 7.2</a></li>
+            <li><a href="module-9/SmithJ_EX6.html">Assignment 9.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
