--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ Module 4.2
             <li><a href="module-5/SmithJ_EX4.html">Assignment 5.2</a></li>
             <li><a href="module-7/SmithJ_EX5.html">Assignment 7.2</a></li>
             <li><a href="module-9/SmithJ_EX6.html">Assignment 9.2</a></li>
+            <li><a href="module-11/assignment-11.2.html">Assignment 11.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
-            <li><a href="#">bioSite Project Home Page</a></li>
+            <li><a href="https://i12b-semaj.github.io/bioSite/">bioSite Project Home Page</a></li>
             <li><a href="#">Final Exam</a></li>
         </ul>
         <h4>Important Links</h4>
