--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Module 4.2
         <h3>Projects</h3>
         <ul>
             <li><a href="https://i12b-semaj.github.io/bioSite/">bioSite Project Home Page</a></li>
-            <li><a href="#">Final Exam</a></li>
+            <li><a href="module-12/index.html">Final Exam</a></li>
         </ul>
         <h4>Important Links</h4>
         <ul>
